[tool.poetry]
name = "pypi-mirror"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pypi_mirror"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
hypercorn = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
